<resources>
    <string name="app_name">InStock</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dashboard">Dashboard</string>
    <string name="notes">Notes</string>
    <string name="setting">Settings</string>

    <string name="add_item">Add Item</string>
    <string name="add_note">Add Note</string>

    <string name="categories">Categories</string>
    <string name="category_name">Category: %s</string>

    <string name="grocery">Grocery</string>
    <string name="grooming">Grooming</string>
    <string name="stationary">Stationary</string>
    <string name="tech">Tech</string>
    <string name="others">Others</string>

    <string name="alreadySignedUp">Already have an account? login</string>

    <string name="note_body_text">
        Some Random long note body text.Note-taking (sometimes written as notetaking or note taking) is the practice of recording information from different sources and platforms. By taking notes, the writer records the essence of the information, freeing their mind from having to recall everything.[1] Notes are commonly drawn from a transient source, such as an oral discussion at a meeting, or a lecture (notes of a meeting are usually called minutes), in which case the notes may be the only record of the event.
    </string>

</resources>