<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoriesFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/categories"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Grocery -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_grocery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/grocery_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/grocery"
                />
            <!-- Title -->
            <TextView
                android:id="@+id/card_grocery_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--Grooming -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_grooming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/grooming_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/grooming"
                />
            <!-- Title -->
            <TextView
                android:id="@+id/card_grooming_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grooming"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--Stationary -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_stationary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_grocery"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/stationary_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/stationary"
                />
            <!-- Title -->
            <TextView
                android:id="@+id/card_stationary_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stationary"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--Tech -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_grooming"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/tech_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/tech"
                />
            <!-- Title -->
            <TextView
                android:id="@+id/card_tech_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- Others -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_stationary"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:id="@+id/card_others_name"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/other_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/others"
                />
            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>